objects/vlocity_cmt__UserNotification__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ActionLink__c</fullName>
        <label>Action Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DismissedDate__c</fullName>
        <label>Dismissed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpiresDate__c</fullName>
        <label>Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NotificationType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASSISTIVE_NOTIFICATION</fullName>
                </value>
                <value>
                    <fullName>ERROR_MESSAGE</fullName>
                </value>
                <value>
                    <fullName>WARNING_MESSAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReadDate__c</fullName>
        <label>Read</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SentDate__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SentToUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <label>Notification Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>